# rust-axum-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
proto/: order.proto  user.proto
src/: config.rs  main.rs  openapi.rs  proto.rs  routes.rs
src/controllers/: login.rs  mod.rs  order.rs  socket.rs  user.rs
src/controllers/v1/: auth.rs  mod.rs  protected.rs  root.rs
src/controllers/v2/: mod.rs  root.rs
src/grpc/: mod.rs
src/grpc/controllers/: order.rs  user.rs
src/grpc/endpoints/: order.rs  user.rs
src/http/: mod.rs  routes.rs
src/http/controllers/v1/: mod.rs  order.rs  user.rs
src/http/controllers/v2/: mod.rs  order.rs  user.rs
src/http/endpoints/v1/: order.rs  user.rs
src/http/endpoints/v2/: order.rs
src/http/middlewares/: jwt_authorize.rs  mod.rs
src/middlewares/: authorize.rs  cookie.rs  jwt.rs  jwt_authorize.rs  mod.rs  request_logger.rs
src/services/: mod.rs  order.rs  user.rs
